--- a/Exercicos/ex001/index.html
+++ b/Exercicos/ex001/index.html
@@ -9,6 +9,6 @@
     <h1>Olá, Mundo</h1>
     <hr>
     <p>Este é o meu primeiro documento HTML estou muito feliz</p>
-    <p>Estou no primeiro modulo</p>
+    <p><p>Estou no primeiro modulo</p>
 </body>
 </html>
